--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -5,11 +5,12 @@ on:
 
 jobs:
   run-shell-commands:
-  steps:
-    - name: echo string
-      run: echo "Hello"
-    - name: Multi line string
-      run: |
-        pwd
-        node -v
-        ls -a
+    runs-on: ubuntu-latest
+    steps:
+      - name: echo string
+        run: echo "Hello"
+      - name: Multi line string
+        run: |
+          pwd
+          node -v
+          ls -a
