--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -17,6 +17,8 @@ jobs:
         run: terraform init
       - name: Terraform validate
         run:  terraform validate
+      - name: Terraform plan
+        run: terraform plan
       - name: Multi line string
         run: |
           pwd
