--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -3,6 +3,9 @@ name: shell commands
 on:
   - push
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
