--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -23,6 +23,8 @@ jobs:
         run:  terraform validate
       - name: Terraform plan
         run: terraform plan
+      - name: Terraform apply
+        run: terraform apply
       - name: Multi line string
         run: |
           pwd
