--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Terraform plan
         run: terraform plan
       - name: Terraform apply
-        run: terraform apply
+        run: terraform apply -auto-approve
       - name: Multi line string
         run: |
           pwd
