--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -25,6 +25,8 @@ jobs:
         run: terraform plan
       - name: Terraform apply
         run: terraform apply -auto-approve
+      - name: Terraform destroy
+        run: terraform destroy -auto-approve
       - name: Multi line string
         run: |
           pwd
